Add PostgreSQL support, env-based CORS and API URL for cloud deployment